<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/white_cold"
    tools:context=".ui.fragment.AddProductFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/shape_radius">

        <TextView
            android:id="@+id/enter_product_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/enter_product_details"
            android:textAllCaps="true"
            android:textColor="@color/grey_dark"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/title_style"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@id/enter_product_details_title"
            app:layout_constraintTop_toBottomOf="@id/enter_product_details_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_product_name"
            style="@style/edit_text_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/product_name"
            app:layout_constraintTop_toBottomOf="@id/product_name" />


        <TextView
            android:id="@+id/product_firma_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title_style"
            android:text="@string/company_name"
            app:layout_constraintStart_toStartOf="@id/product_name"
            app:layout_constraintTop_toBottomOf="@id/edt_product_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_product_firma"
            style="@style/edit_text_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/edt_product_name"
            app:layout_constraintTop_toBottomOf="@id/product_firma_name" />

        <TextView
            android:id="@+id/product_count_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title_style"
            android:text="@string/count"
            app:layout_constraintStart_toStartOf="@id/product_name"
            app:layout_constraintTop_toBottomOf="@id/edt_product_firma" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_product_count"
            style="@style/edit_text_style"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/edt_product_name"
            app:layout_constraintTop_toBottomOf="@id/product_count_name" />

        <TextView
            android:id="@+id/product_initial_price_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title_style"
            android:text="@string/initial_price"
            app:layout_constraintStart_toStartOf="@id/product_name"
            app:layout_constraintTop_toBottomOf="@id/edt_product_count" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_product_initial_price"
            style="@style/edit_text_style"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/edt_product_name"
            app:layout_constraintTop_toBottomOf="@id/product_initial_price_name" />

        <TextView
            android:id="@+id/product_price_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title_style"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="@id/product_name"
            app:layout_constraintTop_toBottomOf="@id/edt_product_initial_price" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_product_price"
            style="@style/edit_text_style"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/edt_product_name"
            app:layout_constraintTop_toBottomOf="@id/product_price_name" />

        <TextView
            android:id="@+id/product_code_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title_style"
            android:text="@string/code"
            app:layout_constraintStart_toStartOf="@id/product_name"
            app:layout_constraintTop_toBottomOf="@id/edt_product_price" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_product_code"
            style="@style/edit_text_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/edt_product_name"
            app:layout_constraintTop_toBottomOf="@id/product_code_name" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_btn"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_product_code"
            android:layout_marginTop="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>